ags (2.2.34)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved AgsAnimationWindow draw only as needed
	* improved ref-count of AgsReturnableThread
	* improved resetting AgsReturnableThread

ags (2.2.33)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsAnimationWindow
	* fixed memory-leaks in ags_turtle.c
	* fixed memory-leaks in ags_lv2_turtle_parser.c
	* fixed memory-leaks in ags_simple_file.c

ags (2.2.32)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed uninitialized values for FreeBSD

ags (2.2.31)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed uninitialized values

ags (2.2.30)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsMainLoop ::sync-counter-inc() and ::sync-counter-dec() no return type

ags (2.2.29)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved AgsThreadPool make AgsReturnableThread returning
	* minor improvements added -Werror=return-type

ags (2.2.28)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags_audio_buffer_util_peak_*() to handle 0.0 correct
	* fixed dead-lock AgsPulseDevout provide for each buffer sub-block lock
	* fixed dead-lock AgsCoreAudioDevout provide for each buffer sub-block lock
	* fixed AgsSimpleFile audio loop start/end of AgsSyncsynth to round

ags (2.2.27)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* refactored get object mutex

ags (2.2.26)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented lock-free soundcard buffer in ags-play recall
	* implemented ags_soundcard_get_sub_block_count()
	* implemented ags_soundcard_trylock_sub_block()
	* implemented ags_soundcard_unlock_sub_block()
	* improved AgsDevout, AgsPulseDevout, AgsJackDevout and AgsCoreAudioDevout

ags (2.2.25)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* refactored ags_audio_buffer_util.c to support builtin vector functions