@@ -2,6 +2,7 @@ ags (2.2.34)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
 	* improved AgsAnimationWindow draw only as needed
+	* improved AgsSoundcardEditor set sensitive
 	* improved ref-count of AgsReturnableThread
 	* improved resetting AgsReturnableThread
 
